# robotis_motion_controller

./: PR_DESCRIPTION.md  README.md  README_backup.md  robotis_motion_controller_ci.repos
cyclo_motion_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
cyclo_motion_controller_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
cyclo_motion_controller_core/include/cyclo_motion_controller_core/common/: type_define.hpp
cyclo_motion_controller_core/include/cyclo_motion_controller_core/controllers/ai_worker/: ai_worker_movej_controller.hpp  ai_worker_movel_controller.hpp  vr_controller.hpp
cyclo_motion_controller_core/include/cyclo_motion_controller_core/controllers/open_manipulator/: open_manipulator_movej_controller.hpp  open_manipulator_movel_controller.hpp
cyclo_motion_controller_core/include/cyclo_motion_controller_core/kinematics/: kinematics_solver.hpp
cyclo_motion_controller_core/include/cyclo_motion_controller_core/optimization/: qp_base.hpp
cyclo_motion_controller_core/src/controllers/ai_worker/: ai_worker_movej_controller.cpp  ai_worker_movel_controller.cpp  vr_controller.cpp
cyclo_motion_controller_core/src/controllers/open_manipulator/: open_manipulator_movej_controller.cpp  open_manipulator_movel_controller.cpp
cyclo_motion_controller_core/src/kinematics/: kinematics_solver.cpp
cyclo_motion_controller_core/src/retargeting/: __init__.py  optimizer.py  robot_wrapper.py  seq_retarget.py
motion_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
motion_controller_core/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
motion_controller_core/cmake/: motion_controller_coreConfig.cmake.in
motion_controller_core/include/: type_define.h
motion_controller_core/include/motion_controller_core/: QP_base.hpp  ai_worker_controller.hpp  joint_space_controller.hpp  kinematics_solver.hpp  robot_controller.hpp
motion_controller_core/include/motion_controller_core/common/: type_define.h
motion_controller_core/include/motion_controller_core/controllers/: ai_worker_controller.hpp  ai_worker_wholebody_controller.hpp  joint_space_controller.hpp
motion_controller_core/include/motion_controller_core/controllers/ai_worker/: ai_worker_movej_controller.hpp  ai_worker_movel_controller.hpp  vr_controller.hpp
motion_controller_core/include/motion_controller_core/controllers/omx/: omx_controller.hpp  omx_movej_controller.hpp  omx_movel_controller.hpp
motion_controller_core/include/motion_controller_core/controllers/omy/: omy_controller.hpp  (+2 more)
motion_controller_core/include/motion_controller_core/kinematics/: kinematics_solver.hpp
motion_controller_core/include/motion_controller_core/optimization/: qp_base.hpp
motion_controller_core/legacy_cpp/src/kinematics/: kinematics_solver.cpp
motion_controller_core/motion_controller_core/kinematics/: __init__.py  pinocchio_solver.py  pyroki_solver.py
motion_controller_core/motion_controller_core/trajectory/: scurve_profile.py
motion_controller_core/src/: ai_worker_controller.cpp  joint_space_controller.cpp  kinematics_solver.cpp  robot_controller.cpp
motion_controller_core/src/controllers/: ai_worker_controller.cpp  ai_worker_wholebody_controller.cpp  joint_space_controller.cpp
motion_controller_core/src/controllers/ai_worker/: ai_worker_controller.cpp  ai_worker_movej_controller.cpp  ai_worker_movel_controller.cpp  joint_space_controller.cpp  vr_controller.cpp
motion_controller_core/src/controllers/omx/: omx_controller.cpp  omx_movej_controller.cpp  omx_movel_controller.cpp
motion_controller_core/src/controllers/omy/: omy_controller.cpp  omy_movej_controller.cpp  omy_movel_controller.cpp
motion_controller_core/src/controllers/open_manipulator/: open_manipulator_controller.cpp  open_manipulator_movej_controller.cpp  open_manipulator_movel_controller.cpp
motion_controller_core/src/kinematics/: kinematics_solver.cpp
motion_controller_core/src/retargeting/: opt.py  optimizer.py  retarget.py  seq_retarget.py
motion_controller_core/tests/: test_kinematics.py  test_pyroki.py  test_trajectory.py
motion_controller_msgs/: CMakeLists.txt  package.xml
motion_controller_msgs/msg/: HandJoints.msg
motion_controller_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
motion_controller_ros/config/: ai_worker_config.yaml  controller_config.yaml  omx_config.yaml  omy_config.yaml
motion_controller_ros/include/motion_controller_ros/: ai_worker_controller.hpp  ai_worker_controller_node.hpp  joint_space_controller_node.hpp
motion_controller_ros/include/motion_controller_ros/nodes/: ai_worker_controller_node.hpp  ai_worker_wholebody_controller_node.hpp  joint_space_controller_node.hpp  leader_controller_node.hpp  mini_leader_controller_node.hpp
motion_controller_ros/include/motion_controller_ros/utils/: reference_checker_node.hpp
motion_controller_ros/launch/: ai_worker_controller.launch.py  ai_worker_vr.launch.py  controller.launch.py  omx_controller.launch.py  omy_controller.launch.py
motion_controller_ros/models/ai_worker/: ffw_sg2_follower_wholebody.urdf
motion_controller_ros/src/: ai_worker_controller.cpp  ai_worker_controller_node.cpp  joint_space_controller_node.cpp
motion_controller_ros/src/nodes/: ai_worker_controller_node.cpp  ai_worker_wholebody_controller_node.cpp  joint_space_controller_node.cpp  leader_controller_node.cpp  mini_leader_controller_node.cpp
motion_controller_ros/src/nodes/ai_worker/: ai_worker_controller_node.cpp  ai_worker_movej_controller_node.cpp  ai_worker_movel_controller_node.cpp  joint_space_controller_node.cpp  leader_controller_node.cpp  vr_controller_node.cpp
motion_controller_ros/src/nodes/omx/: omx_controller_node.cpp  omx_movej_controller_node.cpp  omx_movel_controller_node.cpp
motion_controller_ros/src/nodes/omy/: omy_controller_node.cpp  omy_movej_controller_node.cpp  omy_movel_controller_node.cpp
motion_controller_ros/src/utils/: eef_interactive_marker_node.cpp  reference_checker_node.cpp
motion_controller_ros_py/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
motion_controller_ros_py/scripts/: teleop_retargeting.py
(+157 files in other folders)
