<?xml version="1.0"?>
<package format="3">
  <name>motion_controller</name>
  <version>0.0.1</version>
  <description>
    Meta package for ROBOTIS motion controller
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kyu@robotis.com">Yeonguk Kim</author>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>motion_controller_core</exec_depend>
  <exec_depend>motion_controller_models</exec_depend>
  <exec_depend>motion_controller_ros</exec_depend>
  <exec_depend>motion_controller_ros_py</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
