<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_controller_core</name>
  <version>0.1.0</version>
  <description>Core motion controller library for inverse kinematics and QP-based control without ROS dependencies</description>
  <maintainer email="kyu@robotis.com">YoungWook0533</maintainer>
  <license>Apache-2.0</license>

  <author email="kyu@robotis.com">YoungWook0533</author>

  <build_depend>eigen</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>osqp-eigen</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>osqp-eigen</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>gtest</test_depend>
</package>
